# novel-reader

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy-fnos.yml
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: login.spec.ts
apps/desktop/src/: DesktopApp.tsx  main.tsx  parseLocal.test.ts  styles.css  window.test.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  app.json  metro.config.js  package.json  vitest.api.config.ts  vitest.config.ts
apps/mobile/app/: _layout.tsx  forgot-password.tsx  login.tsx  register.tsx
apps/mobile/components/: BookDetailModal.tsx  ChapterContent.tsx  CoverThumb.tsx
apps/mobile/src/: api.integration.test.ts  api.ts  polyfills.ts  smoke.test.ts  theme.ts
apps/mobile/test/: setup.ts
apps/server/: package.json  tsconfig.json  tsconfig.seed.json  vitest.api.config.ts  vitest.config.ts
apps/server/prisma/: schema.prisma  seed-data.ts  seed.ts
apps/server/src/: api.integration.test.ts  app.module.ts  main.ts
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
deploy/fnos/: .env.example  Dockerfile.api  Dockerfile.hook  Dockerfile.web  deploy.sh  docker-compose.hook.yml  docker-compose.yml  nginx.conf  setup-runner.sh  setup-webhook.sh
docs/: README.md  用户完整手册.md
fixtures/: demo.txt
scripts/: start.ps1
(+106 files in other folders)
